<resources>
    <string name="app_name">Medz</string>

    <!-- LOGIN SCREEN -->
    <string name="login_username_empty_error">A valid username must be entered</string>
    <string name="login_password_empty_error">A valid password must be entered</string>
    <string name="login_failed_error">Username and password incorrect</string>
    <string name="login_button_login">Login</string>
    <string name="login_button_register">Register</string>
    <string name="login_hint_email">Email</string>
    <string name="login_hint_password">Password</string>

    <!-- REGISTRATION SCREEN -->
    <string name="registration_username_empty_error">A valid username must be entered</string>
    <string name="registration_password_empty_error">A valid password must be entered</string>
    <string name="registration_passwords_not_matched_error">Passwords do not match</string>
    <string name="registration_login_error">Account created, but login failed. Please try logging in.</string>
    <string name="register_button_register">Register</string>
    <string name="register_hint_email">Email</string>
    <string name="register_hint_password">Password</string>
    <string name="register_hint_password_confirm">Confirm Password</string>

    <!-- SCAN STRINGS -->
    <string name="scan_button_scan">Begin Scanning</string>
    <string name="scan_button_scan_stop">Stop Scanning</string>

    <!-- PREFERENCE KEYS -->
    <string name="medication_prefs">MEDICATION_PREFS</string>
    <string name="view_medication">VIEW_MEDICATION</string>
    <string name="scan_medication">SCAN_MEDICATION</string>
    <string name="add_medication">ADD_MEDICATION</string>
    <string name="medication_list">MEDICATION_LIST</string>
    <string name="medication_history">MEDICATION_HISTORY</string>

    <!-- REMINDER KEYS -->
    <string name="reminder_id_list">REMINDER_ID_LIST</string>

    <!-- MAIN SCREEN -->
    <string name="main_next_medication">Next medication</string>
    <string name="click_once_taken">CLICK ONCE TAKEN</string>
    <string name="medication_days">Days</string>
    <string name="notes_extra_instructions">Add notes or extra instructions here</string>
    <string name="add_reminder_time">Add Reminder</string>
    <string name="create_new_medication">CREATE NEW MEDICATION</string>
    <string name="main_no_meds">No medications!\nAdd a new medication below</string>
    <string name="view_all_no_meds">No medications!\nAdd a new medication on the home page</string>

    <!-- DETAILED MEDICATION SCREEN -->
    <string name="edit_screen_state">EDIT_SCREEN_STATE</string>

    <!-- NOTIFICATIONS -->
    <string name="reset_notification_count">RESET_NOTIFICATION_COUNT</string>

    <string name="feedback_email_us_here">Got feedback? Email us here!</string>

</resources>
