<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegistrationActivity" android:padding="16dp">

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/emailEntry" android:hint="@string/register_hint_email"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordEntry" android:hint="@string/register_hint_password"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordConfirmEntry" android:hint="@string/register_hint_password_confirm"/>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/registrationProgress" android:visibility="gone"/>
    <TextView
            android:text=""
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/errorText" android:visibility="gone"/>
    <Button
            android:text="@string/register_button_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/submitRegistrationButton"/>


</LinearLayout>