<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" tools:layout_editor_absoluteY="8dp" tools:layout_editor_absoluteX="8dp">
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/usernameEntry"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/login_hint_password"
                android:ems="10"
                android:id="@+id/passwordEntry"/>
        <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/loginProgress" android:visibility="gone"/>
        <TextView
                android:text=""
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/errorText" android:visibility="gone"/>
        <Button
                android:text="@string/login_button_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/submitButton"/>
        <Button
                android:text="@string/login_button_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/openRegistrationButton"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>