<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    tools:context=".EditMedicationActivity"
    android:background="@color/mainCardBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="32dp">

        <ImageView
            android:layout_width="175dp"
            android:layout_height="175dp"
            android:id="@+id/pillImageView"
            android:background="@drawable/card_background"
            android:backgroundTint="@color/purple"
            android:layout_marginBottom="16dp"
            android:elevation="5dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nameEditText"
            android:hint="medication name"
            android:textSize="32sp"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/sf_heavy"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nameTextView"
            android:text="MEDICATION NAME"
            android:textSize="32sp"
            android:textColor="@color/textColor"
            android:layout_marginBottom="4dp"
            android:visibility="gone"
            android:fontFamily="@font/sf_heavy"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Dose"
                    android:textColor="@color/disabledTextColor"
                    android:fontFamily="@font/sf_medium"
                    android:textSize="20sp"
                    android:layout_marginBottom="-12dp"/>

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/doseEditText"
                    android:inputType="numberDecimal"
                    android:hint="in mL"
                    android:textColor="@color/textColor"
                    android:textSize="20sp"
                    android:layout_marginBottom="12dp"
                    android:fontFamily="@font/sf_medium"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/doseTextView"
                    android:inputType="numberDecimal"
                    android:textColor="@color/textColor"
                    android:layout_marginBottom="12dp"
                    android:textSize="24sp"
                    android:visibility="gone"
                    android:fontFamily="@font/sf_medium"/>

        </LinearLayout>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Reminders"
                android:textColor="@color/textColor"
                android:textSize="24sp"
                android:fontFamily="@font/sf_bold"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/todayTextView"
                android:text="You take this medication today!"
                android:fontFamily="@font/sf_regular"
                android:textColor="@color/purple"
                android:textSize="20sp"
                android:layout_marginTop="-14dp"
                android:visibility="gone"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="12dp">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/weekdayHeaderTextView"
                        android:textColor="@color/disabledTextColor"
                        android:text="@string/medication_days"
                        android:textSize="20sp"
                        android:layout_marginBottom="-12dp"
                        android:fontFamily="@font/sf_medium"/>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginBottom="12dp">

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/mondayTextView"
                            android:text="monday"
                            android:textSize="24sp"
                            android:textColor="@color/textColor"
                            android:clickable="true"
                            android:fontFamily="@font/sf_medium"
                            android:layout_marginBottom="-20dp"
                            android:paddingBottom="8dp"/>

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/tuesdayTextView"
                            android:text="tuesday"
                            android:textSize="24sp"
                            android:textColor="@color/textColor"
                            android:fontFamily="@font/sf_medium"
                            android:layout_marginBottom="-20dp"
                            android:paddingBottom="8dp"/>

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/wednesdayTextView"
                            android:text="wednesday"
                            android:textSize="24sp"
                            android:textColor="@color/textColor"
                            android:fontFamily="@font/sf_medium"
                            android:layout_marginBottom="-20dp"
                            android:paddingBottom="8dp"/>

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/thursdayTextView"
                            android:text="thursday"
                            android:textSize="24sp"
                            android:textColor="@color/textColor"
                            android:fontFamily="@font/sf_medium"
                            android:layout_marginBottom="-20dp"
                            android:paddingBottom="8dp"/>

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/fridayTextView"
                            android:text="friday"
                            android:textSize="24sp"
                            android:textColor="@color/textColor"
                            android:fontFamily="@font/sf_medium"
                            android:layout_marginBottom="-20dp"
                            android:paddingBottom="8dp"/>

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/saturdayTextView"
                            android:text="saturday"
                            android:textSize="24sp"
                            android:textColor="@color/textColor"
                            android:fontFamily="@font/sf_medium"
                            android:layout_marginBottom="-20dp"
                            android:paddingBottom="8dp"/>

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/sundayTextView"
                            android:text="sunday"
                            android:textSize="24sp"
                            android:textColor="@color/textColor"
                            android:fontFamily="@font/sf_medium"
                            android:layout_marginBottom="-20dp"
                            android:paddingBottom="8dp"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/medicationTimesHeaderTextView"
                        android:text="Times"
                        android:textColor="@color/disabledTextColor"
                        android:textSize="20sp"
                        android:fontFamily="@font/sf_medium"
                        android:layout_marginBottom="-12dp"/>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/medicationTimesLinearLayout"
                        android:orientation="vertical"
                        android:paddingBottom="10dp">
                    <!-- For medication times -->

                    <!--Programmatically add textviews for the times-->
                </LinearLayout>

                <Button
                        android:layout_width="wrap_content"
                        android:layout_height="38dp"
                        android:text="@string/add_reminder_time"
                        android:drawableStart="@drawable/ic_add"
                        android:drawablePadding="6dp"
                        android:background="@drawable/mark_as_done_background"
                        android:backgroundTint="@color/purple"
                        android:textColor="@color/mainCardBackground"
                        android:fontFamily="@font/sf_medium"
                        android:id="@+id/addReminderButton"
                        android:layout_marginTop="12dp"
                        android:layout_marginLeft="3dp"
                        android:layout_marginRight="3dp"
                        android:textSize="16sp"
                        android:visibility="gone"
                        android:gravity="center_vertical"
                        android:paddingLeft="8dp"
                        android:paddingRight="14dp"
                        android:paddingTop="2dp"/>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/notesHeaderTextView"
            android:text="Notes"
            android:textSize="20sp"
            android:textColor="@color/disabledTextColor"
            android:layout_marginBottom="-12dp"
            android:fontFamily="@font/sf_medium"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/notesEditText"
            android:hint="@string/notes_extra_instructions"
            android:fontFamily="@font/sf_medium"
            android:layout_marginBottom="12dp"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/notesTextView"
            android:textColor="@color/textColor"
            android:textSize="24sp"
            android:visibility="gone"
            android:fontFamily="@font/sf_medium"
            android:layout_marginBottom="12dp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="History"
                android:textColor="@color/textColor"
                android:textSize="24sp"
                android:fontFamily="@font/sf_bold"/>

        <org.vontech.medicine.views.CalendarView
                android:id="@+id/calendar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:text="Edit Medication"
            android:background="@drawable/mark_as_done_background"
            android:id="@+id/editMedicationButton"
            android:textSize="18sp"
            android:fontFamily="@font/sf_bold"
            android:textColor="@color/mainCardBackground"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:textAlignment="center"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:id="@+id/editingButtons">

            <LinearLayout
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:background="@drawable/square_button_background"
                    android:backgroundTint="@color/red"
                    android:layout_marginBottom="12dp"
                    android:layout_marginRight="32dp"
                    android:paddingTop="18dp"
                    android:paddingLeft="18dp"
                    android:elevation="5dp"
                    android:orientation="vertical"
                    android:id="@+id/deleteMedicationButton">

                <ImageView
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:src="@drawable/ic_delete_medication"
                        android:layout_marginTop="-4dp"/>

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="delete\nmedication"
                        android:fontFamily="@font/sf_medium"
                        android:textSize="19sp"
                        android:textColor="@color/mainCardBackground"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="4dp"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:background="@drawable/square_button_background"
                    android:backgroundTint="@color/purple"
                    android:layout_marginBottom="12dp"
                    android:paddingTop="18dp"
                    android:paddingLeft="18dp"
                    android:elevation="5dp"
                    android:clickable="true"
                    android:orientation="vertical"
                    android:id="@+id/saveMedicationButton">

                <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:src="@drawable/ic_save"/>

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="save\nmedication"
                        android:fontFamily="@font/sf_medium"
                        android:textSize="19sp"
                        android:textColor="@color/mainCardBackground"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="8dp"/>
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</ScrollView>

